--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   },
   "dependencies": {
     "react": "^15.3.2",
-    "react-native": "0.37.0",
+    "react-native": "^0.37.0",
     "react-native-button": "^1.7.1",
-    "react-native-maps": "^0.11.0",
+    "react-native-voice": "^0.1.6",
+    "react-native-workers": "^0.3.1",
     "whatwg-fetch": "^2.0.1"
   },
   "jest": {
