--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "apsl-react-native-button": "^3.0.2",
     "react": "^15.3.2",
     "react-native": "^0.37.0",
     "react-native-button": "^1.7.1",
+    "react-native-push-notification": "^2.2.1",
     "react-native-voice": "^0.1.6",
-    "react-native-workers": "^0.3.1",
     "whatwg-fetch": "^2.0.1"
   },
   "jest": {
